<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by Mohamed Ibrahim N
  ~ Created on : 1/1/18 7:44 PM
  ~ File name : music_menu.xml
  ~ Last modified by : Mohamed Ibrahim N
  ~ Last modified on : 27/12/17 8:42 PM
  ~ Project : MusicApp
  ~ Organization : FreeLancer trinhvanbien
  ~ Copyright (c) 2018. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/play"
        android:orderInCategory="102"
        android:title="@string/play" />
    <item
        android:id="@+id/add_to_queue"
        android:orderInCategory="102"
        android:title="@string/add_to_playing_queue" />
    <item
        android:id="@+id/add_to_favorite"
        android:orderInCategory="102"
        android:title="@string/add_to_favorite" />
    <item
        android:id="@+id/open_folder"
        android:orderInCategory="102"
        android:title="@string/open_file_in_folder" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="102"
        android:title="@string/delete" />
    <item
        android:id="@+id/share_file"
        android:orderInCategory="102"
        android:title="@string/share_file" />
</menu>